fixed hamburger button z-index

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -11,6 +11,7 @@ header {
 	nav {
 		button {
 			margin: 23px 30px 0 0;
+			z-index: 9999;
 		}
 		h1.brand {
 			position: relative;
